--- a/templates/Back/market/index.html.twig
+++ b/templates/Back/market/index.html.twig
@@ -4,8 +4,8 @@
 
 {% block stylesheets %}
     {{ parent() }}
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -60,7 +60,7 @@
                     <td class="market-data">{{ market.IDmarket }}</td>
                     <td class="market-data">{{ market.name }}</td>
                     <td class="market-data">
-
+   <span class="fa fa-star checked"></span>
                         {% for i in 1..5 %}
                             {% if i <= market.rate %}
                                 <span class="fa fa-star checked"></span>
