--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -19,8 +19,7 @@
   /**
    * colors
    */
-  
-  --cadet-blue-crayola: hsl(227, 13%, 73%);
+   --cadet-blue-crayola: hsl(227, 13%, 73%);
   --maximum-yellow-red: hsl(41, 95%, 61%);
   --medium-sea-green: hsl(142, 43%, 54%);
   --blue-crayola_10: hsla(222, 100%, 61%, 0.05);
@@ -40,6 +39,7 @@
   --black_10: hsla(0, 0%, 0%, 0.1);
   --white: hsl(0, 0%, 100%);
 
+  
   /**
    * gradient color
    */
@@ -153,6 +153,7 @@ body {
   color: var(--cadet-blue-crayola);
   font-size: 1.6rem;
   line-height: 1.4;
+  
 }
 
 body.active { overflow: hidden; }
@@ -411,7 +412,7 @@ body.active { overflow: hidden; }
 
 .hero-text {
   font-size: var(--fs-5);
-  margin-block: 25px 40px;
+  margin-block:0px
 }
 
 
@@ -433,7 +434,7 @@ body.active { overflow: hidden; }
   border-radius: var(--radius-24);
   padding: 20px;
   box-shadow: var(--shadow-2);
-  margin-block-start: -160px;
+  margin-block-start: 00px;
 }
 
 .trend-tab .tab-nav {
@@ -689,7 +690,7 @@ body.active { overflow: hidden; }
 
 .instruction-card .card-title {
   font-size: var(--fs-4);
-  margin-block: 5px 15px;
+  margin-block: 0px 0px;
 }
 
 .instruction-card .card-text { padding-inline: 20px; }
@@ -704,7 +705,7 @@ body.active { overflow: hidden; }
 
 .about { background-color: var(--eerie-black-1); }
 
-.about-banner { margin-block-end: 40px; }
+.about-banner { margin-block-end: 0px; }
 
 
 
@@ -728,7 +729,7 @@ body.active { overflow: hidden; }
 
 .app-banner {
   position: relative;
-  margin-block-start: 60px;
+  margin-block-start: 0px;
 }
 
 .app-banner .span {
@@ -1018,7 +1019,7 @@ address.footer-contact-link { max-width: 30ch; }
   .navbar,
   .navbar.active {
     all: unset;
-    margin-inline-end: auto;
+    margin-inline-end: 0px;
   }
 
   .navbar-list {
@@ -1093,7 +1094,7 @@ address.footer-contact-link { max-width: 30ch; }
 
   .app-banner { margin-block-start: 0; }
 
-  .app-content { margin-block: 50px; }
+  .app-content { margin-block: 0px; }
 
 }
 
@@ -1186,7 +1187,7 @@ address.footer-contact-link { max-width: 30ch; }
    * APP
    */
 
-  .app-content { margin-block: 100px; }
+  .app-content { margin-block: 00px; }
 
 
 
