--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html class="loading" lang="en" data-textdirection="ltr">
     {% block head %}
-    <head>
+  <head>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -56,7 +58,7 @@
                 <a href="{{ path('app_market_index') }}" class="navbar-link {% if app.request.attributes.get('_route') == 'app_your_pg_index' %}active{% endif %}" data-nav-link>Reclamation</a>
             </li>
             <li class="navbar-item">
-                <a href="{{ path('app_market_index') }}" class="navbar-link {% if app.request.attributes.get('_route') == 'app_pagek_index' %}active{% endif %}" data-nav-link>Blog</a>
+                <a href="{{ path('app_annonce_index') }}" class="navbar-link {% if app.request.attributes.get('_route') == 'app_pagek_index' %}active{% endif %}" data-nav-link>P2P</a>
             </li>
         </ul>
     </nav>
@@ -80,11 +82,17 @@
 
   <main>
     <article>
-
+      <div style:"margin-top:20px">
+      {% block NewAnnonce %}
+          
+      {% endblock  %}
+      </div>
       <!-- 
         - #HERO
       -->
+      {% block section %}
 
+      
       <section class="section hero" aria-label="hero" data-section>
         <div class="container">
 
@@ -98,29 +106,33 @@
 
             <a href="#" class="btn btn-primary">Get started now</a>
 
+
+
           </div>
 
           <figure class="hero-banner">
             <img src="/assets/images/hero-banner.png" width="570" height="448" alt="hero banner" class="w-100">
           </figure>
 
+              
+
         </div>
       </section>
 
-
+{% endblock %}  
 
 
 
 
 {% block body %}
 
-
 {% endblock %}
+
 {% block footer %}
     
 
   <!-- 
-    - #FOOTER
+    - #FOOTER 
   -->
 
   <footer class="footer">
@@ -266,7 +278,7 @@
           </li>
 
           <li>
-            <a href="#" class="footer-link">Blog</a>
+            <a href="#" class="footer-link">P2P</a>
           </li>
 
         </ul>
@@ -329,6 +341,10 @@
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> 
+ 
+ <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
    
 {% endblock %}
   </body>
